--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "react",
   "version": "1.0.0",
   "description": "My first React interaction",
-  "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel new.html"
   },
   "author": "Kushal Shrestha",
   "license": "ISC",
   "dependencies": {
-    "parcel": "^2.14.4"
+    "parcel": "^2.14.4",
+    "react": "^19.1.0"
   }
 }
